Correction de l'alignement des catégorie lors de l'édition d'un document

--- a/trunk/web/css/main.css
+++ b/trunk/web/css/main.css
@@ -590,7 +590,6 @@ div#content div#sf_content div#document_categories ul {
 div#content div#sf_content div#category_users ul li,
 div#content div#sf_content div#document_categories ul li {
 	font-weight: bold;
-	height: 22px;
 }
 div#content div#sf_content div#category_users ul li,
 div#content div#sf_content div#document_categories ul li {
